--- a/bg-tracker-system/package.json
+++ b/bg-tracker-system/package.json
@@ -5,11 +5,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts":{
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "vite",
-    "build": "vite build"
-}   ,
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
