Update env file

--- a/bg-tracker-system/.env.production
+++ b/bg-tracker-system/.env.production
@@ -1,1 +1,1 @@
-VITE_API_PRODUCTION_URL=http://amresh-bug-tracker.runasp.net/api
+VITE_API_PRODUCTION_URL=bug-tracker-proxy.amresh-sc03.workers.dev/api
