--- a/bg-tracker-system/.env.production
+++ b/bg-tracker-system/.env.production
@@ -1,1 +1,1 @@
-VITE_API_PRODUCTION_URL=bug-tracker-proxy.amresh-sc03.workers.dev/api
+VITE_API_PRODUCTION_URL=https://bug-tracker-proxy.amresh-sc03.workers.dev/api
