--- a/bg-tracker-system/.env.staging
+++ b/bg-tracker-system/.env.staging
@@ -1,1 +1,1 @@
-VITE_API_STAGING_URL=http://amresh-bug-tracker.runasp.net/api
+VITE_API_STAGING_URL=https://bug-tracker-proxy.amresh-sc03.workers.dev/api
